--- a/public/map.html
+++ b/public/map.html
@@ -3,48 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>The Listen - 시흥 테스트 맵</title>
+<title>현재 지도 - The Listen (시흥 테스트)</title>
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=301ef23f56e23f0dee3eaf47fe734b03&libraries=services"></script>
 <style>
-body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
-header{background:#007bff;color:#fff;text-align:center;padding:10px;font-weight:800}
-#map{width:100%;height:90vh}
-#customerCard{position:fixed;left:0;bottom:0;width:100%;background:#fff;border-top-left-radius:16px;border-top-right-radius:16px;box-shadow:0 -6px 20px rgba(0,0,0,.25);transform:translateY(100%);transition:transform .35s ease;max-height:60vh;overflow-y:auto;z-index:9999}
-#customerCard.active{transform:translateY(0)}
-.card-header{text-align:center;padding:12px;font-weight:900}
-.delivery-item{padding:12px 18px;border-top:1px solid #eee}
-.btn-row{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;margin-top:10px}
-.btn{border:none;border-radius:10px;padding:10px 14px;color:#fff;background:#007bff;cursor:pointer;font-weight:700}
-.btn.gray{background:#6b7280}
-.tag{display:inline-block;margin-left:6px;padding:2px 8px;border-radius:999px;background:#eef4ff;color:#3563ff;font-size:.8rem}
-.my-location-dot{width:12px;height:12px;background:rgba(0,123,255,.95);border-radius:50%;border:2px solid #fff}
+  body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
+  header{background:#007bff;color:#fff;text-align:center;padding:10px;font-weight:800}
+  #map{width:100%;height:90vh}
+  #customerCard{
+    position:fixed;left:0;bottom:0;width:100%;background:#fff;
+    border-top-left-radius:16px;border-top-right-radius:16px;
+    box-shadow:0 -6px 20px rgba(0,0,0,.25);
+    transform:translateY(100%);
+    transition:transform .35s ease;max-height:60vh;overflow-y:auto;z-index:9999;
+  }
+  #customerCard.active{transform:translateY(0)}
+  .card-header{text-align:center;padding:12px;font-weight:900}
+  .delivery-item{padding:12px 18px;border-top:1px solid #eee}
+  .btn-row{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;margin-top:10px}
+  .btn{border:none;border-radius:10px;padding:10px 14px;color:#fff;background:#007bff;cursor:pointer;font-weight:700}
+  .btn.gray{background:#6b7280}
+  .tag{display:inline-block;margin-left:6px;padding:2px 8px;border-radius:999px;background:#eef4ff;color:#3563ff;font-size:.8rem}
+  .my-location-dot{width:12px;height:12px;background:rgba(0,123,255,.95);border-radius:50%;border:2px solid #fff}
 </style>
 </head>
 <body>
-<header>📍 시흥 호반베르디움 테스트맵 (실주소 + 실시간 GPS + 네비연동)</header>
+<header>현재 지도보기 (시흥 테스트 4가구)</header>
 <div id="map"></div>
+
 <div id="customerCard">
   <div class="card-header">고객 상세 정보</div>
   <div id="card-content"></div>
 </div>
 
 <script>
-// ------------------------------------------
-// ⚙️ 기본 세팅
-// ------------------------------------------
+// 지도 초기화
 const map = new kakao.maps.Map(document.getElementById("map"), {
   center: new kakao.maps.LatLng(37.3789, 126.8053),
   level: 5
 });
 const geocoder = new kakao.maps.services.Geocoder();
+
 let myPosition = null;
+const markerById = {};
 let resolvedList = [];
-let markerById = {};
 let markersDrawn = false;
 
-// ------------------------------------------
-// 📡 실시간 GPS 위치 추적 (파란 점)
-// ------------------------------------------
+// GPS 내 위치 (파란 점)
 if (navigator.geolocation) {
   navigator.geolocation.watchPosition(pos => {
     myPosition = new kakao.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
@@ -54,16 +58,13 @@ if (navigator.geolocation) {
         content: '<div class="my-location-dot"></div>',
         map
       });
-    } else window.myCircle.setPosition(myPosition);
-
-    // 위치 바뀔 때마다 재정렬
-    if (resolvedList.length) updateMarkerOrder();
-  }, err => console.warn('GPS Error:', err), {enableHighAccuracy:true});
+    } else {
+      window.myCircle.setPosition(myPosition);
+    }
+  }, err => console.warn('GPS error:', err), {enableHighAccuracy: true});
 }
 
-// ------------------------------------------
-// 🏢 테스트용 주소 4개 (실주소 기반)
-// ------------------------------------------
+// 📦 테스트용 4가구 (시흥 호반베르디움더클래스)
 const base = "경기도 시흥시 수풀안길 19-30 호반베르디움더클래스아파트";
 const deliveriesRaw = [
   {id:"HOVA1701-202", name:"고객A", phone:"010-1111-2222", address:`${base} 1701동 202호`, boxes:1},
@@ -72,98 +73,71 @@ const deliveriesRaw = [
   {id:"HOVA1705-303", name:"고객D", phone:"010-4444-5555", address:`${base} 1705동 303호`, boxes:3}
 ];
 
-// ------------------------------------------
-// 📏 거리 계산 (Haversine)
-// ------------------------------------------
-function distKm(a,b,c,d){
-  const R=6371,dLat=(c-a)*Math.PI/180,dLng=(d-b)*Math.PI/180;
-  const x=Math.sin(dLat/2)**2+Math.cos(a*Math.PI/180)*Math.cos(c*Math.PI/180)*Math.sin(dLng/2)**2;
-  return R*2*Math.atan2(Math.sqrt(x),Math.sqrt(1-x));
-}
+// 거리 계산 (Haversine)
+function distKm(a,b,c,d){const R=6371,dLat=(c-a)*Math.PI/180,dLng=(d-b)*Math.PI/180;
+ const x=Math.sin(dLat/2)**2+Math.cos(a*Math.PI/180)*Math.cos(c*Math.PI/180)*Math.sin(dLng/2)**2;
+ return R*2*Math.atan2(Math.sqrt(x),Math.sqrt(1-x));}
 
-// ------------------------------------------
-// 🗺 주소 → 좌표 변환
-// ------------------------------------------
+// 주소 → 좌표 변환
 let done=0;
 deliveriesRaw.forEach(d=>{
   geocoder.addressSearch(d.address,(res,status)=>{
     done++;
     if(status===kakao.maps.services.Status.OK && res[0]){
-      d.lat=+res[0].y; d.lng=+res[0].x;
-      resolvedList.push(d);
+      d.lat=+res[0].y; d.lng=+res[0].x; resolvedList.push(d);
     }
     if(done===deliveriesRaw.length) drawMarkersSorted();
   });
 });
 
-// ------------------------------------------
-// 📍 마커 순서 정렬 및 표시
-// ------------------------------------------
 function drawMarkersSorted(){
   if(markersDrawn||resolvedList.length===0) return;
-  updateMarkerOrder();
-  markersDrawn=true;
-}
-
-function updateMarkerOrder(){
-  if(!myPosition) return;
   let list=[...resolvedList];
-  const myLat=myPosition.getLat(), myLng=myPosition.getLng();
-  list.sort((a,b)=>distKm(myLat,myLng,a.lat,a.lng)-distKm(myLat,myLng,b.lat,b.lng));
-
-  // 기존 마커 제거
-  Object.values(markerById).forEach(mk=>mk.setMap(null));
-  markerById={};
-
+  if(myPosition){
+    const myLat=myPosition.getLat(), myLng=myPosition.getLng();
+    list.sort((a,b)=>distKm(myLat,myLng,a.lat,a.lng)-distKm(myLat,myLng,b.lat,b.lng));
+  }
   list.forEach((d,i)=>placeMarker(d,i+1));
+  markersDrawn=true;
   localStorage.setItem('totalDeliveries', String(list.length));
 }
 
-// ------------------------------------------
-// 📦 마커 표시 + 클릭 이벤트
-// ------------------------------------------
+// 마커 생성
 function placeMarker(d,order){
   const el=document.createElement('div');
   el.style.cssText=`background:#007bff;color:#fff;border-radius:50%;width:30px;height:30px;
     display:flex;align-items:center;justify-content:center;font-weight:900;font-size:13px;
     border:2px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,.3);cursor:pointer;`;
   el.textContent=order;
-  const overlay=new kakao.maps.CustomOverlay({
-    position:new kakao.maps.LatLng(d.lat,d.lng),
-    content:el,map
-  });
+  const overlay=new kakao.maps.CustomOverlay({position:new kakao.maps.LatLng(d.lat,d.lng),content:el,map});
   markerById[d.id]=overlay;
   el.addEventListener('click',()=>openCard(d,order));
 }
 
-// ------------------------------------------
-// 💳 고객 상세 카드
-// ------------------------------------------
-function openCard(d,order){
-  const card=document.getElementById('customerCard');
-  const box=document.getElementById('card-content');
-  const dong=(d.address.match(/(170\d동\s?\d+호)/)||['',''])[1];
+// 고객 카드 열기
+function openCard(d, order){
+  const card=document.getElementById('customerCard'), box=document.getElementById('card-content');
   box.innerHTML=`
     <div class="delivery-item" style="text-align:center;">
-      <div style="font-size:1.05rem;font-weight:900;">${order}️⃣ 순번 <span class="tag">${dong}</span></div>
+      <div style="font-size:1.05rem;font-weight:900;">${order}️⃣ 순번 
+        <span class="tag">${d.address.match(/(170\d동\s?\d+호)/)?.[1]||''}</span></div>
       <p><b>고객</b>: ${d.name}</p>
       <p><b>전화번호</b>: ${d.phone}</p>
       <p><b>주소</b>: ${d.address}</p>
       <p><b>운송장</b>: ${d.id}</p>
       <p><b>박스수량</b>: ${d.boxes}개</p>
       <div class="btn-row">
-        <button class="btn" onclick="startNavi(${d.lat},${d.lng}, '${encodeURIComponent(d.address)}')">🚘 실시간 네비 연결</button>
+        <button class="btn" onclick="startNavi(${d.lat},${d.lng}, '${encodeURIComponent(d.address)}')">🚘 네비 연결</button>
         <button class="btn" onclick="capturePhoto('${d.id}','${d.address}')">📸 사진 전송</button>
         <button class="btn gray" onclick="closeCard()">닫기</button>
       </div>
     </div>`;
   card.classList.add('active');
 }
+
 function closeCard(){ document.getElementById('customerCard').classList.remove('active'); }
 
-// ------------------------------------------
-// 📸 사진 전송
-// ------------------------------------------
+// 사진 촬영/전송
 function capturePhoto(id,address){
   const input=document.createElement('input');
   input.type='file'; input.accept='image/*'; input.capture='environment';
@@ -173,20 +147,16 @@ function capturePhoto(id,address){
     const today=new Date().toISOString().slice(0,10);
     const completed=JSON.parse(localStorage.getItem('completed')||'[]');
     completed.push({id,address,date:today,photo:true});
-    localStorage.setItem('completed',JSON.stringify(completed));
+    localStorage.setItem('completed', JSON.stringify(completed));
     const mk=markerById[id]; if(mk) mk.getContent().style.opacity='0.4';
     closeCard();
   };
   input.click();
 }
 
-// ------------------------------------------
-// 🚘 카카오내비 연동 (실시간 교통상황 반영)
-// ------------------------------------------
+// 네비 연동
 function startNavi(lat,lng,encodedName){
-  // 카카오맵 네비 링크 (자동 교통경로)
-  const url=`https://map.kakao.com/link/to/${encodedName},${lat},${lng}`;
-  window.open(url,'_blank');
+  location.href=`https://map.kakao.com/link/to/${encodedName},${lat},${lng}`;
 }
 
 window.closeCard=closeCard;
