--- a/public/map.html
+++ b/public/map.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>The Listen - 지도 연동 테스트 (depart 연결 + 아파트 동별 마커)</title>
+<title>현재 지도 - The Listen</title>
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=301ef23f56e23f0dee3eaf47fe734b03&libraries=services"></script>
 <style>
   body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
@@ -13,205 +13,47 @@
     position:fixed;left:0;bottom:0;width:100%;background:#fff;
     border-top-left-radius:16px;border-top-right-radius:16px;
     box-shadow:0 -6px 20px rgba(0,0,0,.25);
-    transform:translateY(100%);
-    transition:transform .35s ease;max-height:60vh;overflow-y:auto;z-index:9999;
+    transform:translateY(100%);transition:transform .3s;z-index:999;
   }
   #customerCard.active{transform:translateY(0)}
-  .card-header{text-align:center;padding:12px;font-weight:900}
-  .delivery-item{padding:12px 18px;border-top:1px solid #eee}
-  .btn-row{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;margin-top:10px}
-  .btn{border:none;border-radius:10px;padding:10px 14px;color:#fff;background:#007bff;cursor:pointer;font-weight:700}
+  .delivery-item{padding:16px;text-align:center}
+  .btn{border:none;border-radius:10px;padding:10px 14px;color:#fff;background:#007bff;cursor:pointer;font-weight:700;margin:4px}
   .btn.gray{background:#6b7280}
-  .tag{display:inline-block;margin-left:6px;padding:2px 8px;border-radius:999px;background:#eef4ff;color:#3563ff;font-size:.8rem}
   .my-location-dot{width:12px;height:12px;background:rgba(0,123,255,.95);border-radius:50%;border:2px solid #fff}
 </style>
 </head>
 <body>
-<header>📍 The Listen - 실시간 지도 연동 (depart → map)</header>
+<header>🗺 The Listen - 실시간 지도</header>
 <div id="map"></div>
-
-<div id="customerCard">
-  <div class="card-header">고객 상세 정보</div>
-  <div id="card-content"></div>
-</div>
+<div id="customerCard"><div id="card-content"></div></div>
 
 <script>
-/* ===========================
-   1️⃣ 지도 초기화
-=========================== */
-const map = new kakao.maps.Map(document.getElementById("map"), {
-  center: new kakao.maps.LatLng(37.3791, 126.8055),
-  level: 4
-});
-const geocoder = new kakao.maps.services.Geocoder();
+const map=new kakao.maps.Map(document.getElementById("map"),{center:new kakao.maps.LatLng(37.379,126.805),level:5});
+const geocoder=new kakao.maps.services.Geocoder();
+let deliveries=[];try{deliveries=JSON.parse(localStorage.getItem('deliveriesJSON')||'[]');}catch{deliveries=[];}
+if(!deliveries.length){deliveries=[{id:"TEST1",name:"테스트",phone:"010-0000-0000",address:"경기도 시흥시 수풀안길 19-30 101동 202호",boxes:1}];}
+let myPos=null;if(navigator.geolocation){navigator.geolocation.watchPosition(p=>{myPos=new kakao.maps.LatLng(p.coords.latitude,p.coords.longitude);
+if(!window.myCircle){window.myCircle=new kakao.maps.CustomOverlay({position:myPos,content:'<div class="my-location-dot"></div>',map});}
+else window.myCircle.setPosition(myPos);},{enableHighAccuracy:true});}
 
-/* ===========================
-   2️⃣ depart.html 연동 데이터 로드
-=========================== */
-let deliveries = [];
-try {
-  const data = localStorage.getItem('deliveriesJSON');
-  if (data) deliveries = JSON.parse(data);
-} catch(e){ console.warn('JSON Parse 실패:', e); }
-
-const defaultBase = "경기도 시흥시 수풀안길 19-30 호반베르디움더클래스아파트";
-if (!deliveries || deliveries.length === 0) {
-  deliveries = [
-    {id:"HOVA101-202", name:"고객A", phone:"010-1111-2222", address:`${defaultBase} 101동 202호`, boxes:1},
-    {id:"HOVA103-303", name:"고객B", phone:"010-2222-3333", address:`${defaultBase} 103동 303호`, boxes:2}
-  ];
-}
-
-/* ===========================
-   3️⃣ GPS 설정 및 내 위치 표시
-=========================== */
-let myPosition = null;
-if (navigator.geolocation) {
-  navigator.geolocation.watchPosition(pos => {
-    myPosition = new kakao.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
-    if (!window.myCircle) {
-      window.myCircle = new kakao.maps.CustomOverlay({
-        position: myPosition,
-        content: '<div class="my-location-dot"></div>',
-        map
-      });
-    } else {
-      window.myCircle.setPosition(myPosition);
-    }
-  }, err => console.warn('GPS error:', err), {enableHighAccuracy:true});
-}
-
-/* ===========================
-   4️⃣ Haversine 거리 계산
-=========================== */
-function distKm(a,b,c,d){
-  const R=6371, dLat=(c-a)*Math.PI/180, dLng=(d-b)*Math.PI/180;
-  const x=Math.sin(dLat/2)**2 + Math.cos(a*Math.PI/180)*Math.cos(c*Math.PI/180)*Math.sin(dLng/2)**2;
-  return R*2*Math.atan2(Math.sqrt(x), Math.sqrt(1-x));
-}
-
-/* ===========================
-   5️⃣ 주소 → 좌표 변환 후 마커 표시
-=========================== */
-let resolved = [];
-let done = 0;
-deliveries.forEach(d=>{
-  if (d.lat && d.lng) { resolved.push(d); done++; if(done===deliveries.length) drawMarkers(); return; }
-  geocoder.addressSearch(d.address,(res,status)=>{
-    done++;
-    if(status===kakao.maps.services.Status.OK && res[0]){
-      d.lat=+res[0].y; d.lng=+res[0].x; resolved.push(d);
-    }
-    if(done===deliveries.length) drawMarkers();
-  });
-});
-
-function drawMarkers(){
-  if (resolved.length===0) return;
-
-  // GPS 거리순 정렬
-  const optimize = localStorage.getItem('optimizeByGPS') === '1';
-  if (myPosition && optimize) {
-    const myLat=myPosition.getLat(), myLng=myPosition.getLng();
-    resolved.sort((a,b)=>distKm(myLat,myLng,a.lat,a.lng)-distKm(myLat,myLng,b.lat,b.lng));
-  }
-
-  const bounds = new kakao.maps.LatLngBounds();
-  resolved.forEach((d,i)=>{
-    d.order = i+1;
-    bounds.extend(new kakao.maps.LatLng(d.lat, d.lng));
-    placeMarker(d);
-  });
-  map.setBounds(bounds);
-}
-
-/* ===========================
-   6️⃣ 마커 표시 (아파트 동별 색상 구분)
-=========================== */
-const markerById = {};
-function placeMarker(d){
-  const dong = d.address.match(/(\d+)동/)?.[1] || "0";
-  const color = dong.endsWith("1") ? "#007bff"
-               : dong.endsWith("3") ? "#10b981"
-               : dong.endsWith("5") ? "#f59e0b"
-               : "#6b7280";
-
-  const el = document.createElement('div');
-  el.style.cssText=`
-    background:${color};
-    color:#fff;border-radius:50%;
-    width:32px;height:32px;
-    display:flex;align-items:center;justify-content:center;
-    font-weight:900;font-size:13px;border:2px solid #fff;
-    box-shadow:0 2px 6px rgba(0,0,0,.3);
-    cursor:pointer;`;
-  el.textContent=d.order||'?';
-
-  const overlay = new kakao.maps.CustomOverlay({
-    position:new kakao.maps.LatLng(d.lat,d.lng),
-    content:el,map
-  });
-  markerById[d.id]=overlay;
-  el.addEventListener('click',()=>openCard(d));
-}
-
-/* ===========================
-   7️⃣ 고객 카드 (하단 슬라이드)
-=========================== */
-function openCard(d){
-  const card=document.getElementById('customerCard');
-  const box=document.getElementById('card-content');
-  box.innerHTML=`
-    <div class="delivery-item" style="text-align:center;">
-      <div style="font-size:1.1rem;font-weight:900;">${d.order}️⃣ 순번 
-        <span class="tag">${d.address.match(/(\d+동\s?\d+호)/)?.[1]||''}</span>
-      </div>
-      <p><b>고객</b>: ${d.name}</p>
-      <p><b>전화번호</b>: ${d.phone}</p>
-      <p><b>주소</b>: ${d.address}</p>
-      <p><b>운송장</b>: ${d.id}</p>
-      <p><b>박스수량</b>: ${d.boxes}개</p>
-      <div class="btn-row">
-        <button class="btn" onclick="startNavi(${d.lat},${d.lng},'${encodeURIComponent(d.address)}')">🚘 길안내</button>
-        <button class="btn" onclick="capturePhoto('${d.id}','${d.address}')">📸 사진 전송</button>
-        <button class="btn gray" onclick="closeCard()">닫기</button>
-      </div>
-    </div>`;
-  card.classList.add('active');
-}
-function closeCard(){ document.getElementById('customerCard').classList.remove('active'); }
-
-/* ===========================
-   8️⃣ 사진 전송
-=========================== */
-function capturePhoto(id,address){
-  const input=document.createElement('input');
-  input.type='file'; input.accept='image/*'; input.capture='environment';
-  input.onchange=e=>{
-    const f=e.target.files&&e.target.files[0]; if(!f) return;
-    alert(`📸 전송 완료\n주소:${address}\n운송장:${id}`);
-    const completed=JSON.parse(localStorage.getItem('completed')||'[]');
-    completed.push({id,address,date:new Date().toISOString(),photo:true});
-    localStorage.setItem('completed', JSON.stringify(completed));
-    const mk=markerById[id]; if(mk) mk.getContent().style.opacity='0.4';
-    closeCard();
-  };
-  input.click();
-}
-
-/* ===========================
-   9️⃣ 네비 연결
-=========================== */
-function startNavi(lat,lng,encodedName){
-  location.href=`https://map.kakao.com/link/to/${encodedName},${lat},${lng}`;
-}
-
-/* ===========================
-   🔟 전역 참조
-=========================== */
-window.capturePhoto=capturePhoto;
-window.startNavi=startNavi;
-window.closeCard=closeCard;
+const markerById={};const bounds=new kakao.maps.LatLngBounds();
+deliveries.forEach((d,i)=>{if(d.lat&&d.lng)return placeMarker(d,i+1);geocoder.addressSearch(d.address,(r,s)=>{if(s===kakao.maps.services.Status.OK&&r[0]){d.lat=+r[0].y;d.lng=+r[0].x;placeMarker(d,i+1);}});});
+function placeMarker(d,o){const dong=d.address.match(/(\d+)동/)?.[1]||"0";
+const color=dong.endsWith("1")?"#007bff":dong.endsWith("3")?"#10b981":"#f59e0b";
+const el=document.createElement('div');el.style.cssText=`background:${color};color:#fff;border-radius:50%;width:32px;height:32px;
+display:flex;align-items:center;justify-content:center;font-weight:900;font-size:13px;border:2px solid #fff;cursor:pointer;`;
+el.textContent=o;const ov=new kakao.maps.CustomOverlay({position:new kakao.maps.LatLng(d.lat,d.lng),content:el,map});
+markerById[d.id]=ov;bounds.extend(new kakao.maps.LatLng(d.lat,d.lng));map.setBounds(bounds);
+el.addEventListener('click',()=>openCard(d,o));}
+function openCard(d,o){const card=document.getElementById('customerCard');const box=document.getElementById('card-content');
+box.innerHTML=`<div class="delivery-item"><h3>${o}️⃣ ${d.name}</h3><p>${d.address}</p><p>📦 ${d.boxes}개</p>
+<button class="btn" onclick="startNavi(${d.lat},${d.lng},'${encodeURIComponent(d.address)}')">🚘 길안내</button>
+<button class="btn" onclick="photo('${d.id}')">📸 사진 전송</button><button class="btn gray" onclick="closeCard()">닫기</button></div>`;
+card.classList.add('active');}
+function closeCard(){document.getElementById('customerCard').classList.remove('active');}
+function photo(id){const i=document.createElement('input');i.type='file';i.accept='image/*';i.capture='environment';
+i.onchange=e=>{if(!e.target.files[0])return;alert('📸 전송완료');markerById[id]?.getContent().style.opacity='0.4';closeCard();};i.click();}
+function startNavi(lat,lng,name){location.href=`https://map.kakao.com/link/to/${name},${lat},${lng}`;}
 </script>
 </body>
 </html>
