--- a/public/depart.html
+++ b/public/depart.html
@@ -6,33 +6,33 @@
 <title>배송출발 - The Listen</title>
 <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-  :root { --brand:#007bff; --bg:#f7f9fc; --card:#fff; }
+  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;}
   body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
   header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
   .wrap{max-width:420px;margin:auto;padding:10px}
   .card{background:var(--card);border-radius:14px;box-shadow:0 4px 14px rgba(0,0,0,.1);padding:14px;margin-bottom:10px}
-  .btn{display:block;width:100%;border:none;border-radius:10px;padding:12px;font-size:15px;font-weight:700;color:#fff;background:var(--brand);margin-top:6px;cursor:pointer}
+  .btn{display:block;width:100%;border:none;border-radius:10px;padding:12px;font-size:15px;font-weight:700;color:#fff;background:var(--brand);margin-top:8px;cursor:pointer}
   .btn.green{background:#10b981}
   .btn.orange{background:#f59e0b}
   input[type="text"]{width:100%;padding:12px;border:1px solid #ddd;border-radius:10px;font-size:15px}
   video{width:100%;border-radius:10px;background:#000}
-  .list{max-height:160px;overflow:auto;margin-top:10px;border:1px solid #eee;border-radius:10px;padding:6px}
+  .list{max-height:180px;overflow:auto;margin-top:10px;border:1px solid #eee;border-radius:10px;padding:6px}
   .pill{display:inline-block;background:#eef4ff;color:#007bff;border-radius:999px;padding:6px 10px;margin:4px;font-size:14px}
   .kpi{display:flex;justify-content:space-between;margin:10px 0;font-weight:800}
 </style>
 </head>
 <body>
-<header>🚚 배송출발 (스마트폰용)</header>
+<header>🚚 배송출발 (The Listen)</header>
 <div class="wrap">
   <div class="card">
     <video id="preview" playsinline muted></video>
-    <button class="btn" id="btnStart">📸 카메라 시작 (후면)</button>
-    <button class="btn" id="btnStop">⛔ 카메라 정지</button>
+    <button class="btn" id="btnStart">📸 카메라 실행 (후면)</button>
+    <button class="btn orange" id="btnBack">⬅️ 뒤로가기</button>
   </div>
 
   <div class="card">
     <div class="kpi"><span>스캔 수량</span><span id="scanCount">0</span></div>
-    <input id="scanInput" type="text" placeholder="운송장 입력 또는 HID 스캐너 입력" />
+    <input id="scanInput" type="text" placeholder="운송장 입력 또는 스캐너 입력" />
     <button class="btn green" id="btnAdd">추가</button>
     <div class="list" id="scanList"></div>
   </div>
@@ -44,36 +44,44 @@
 </div>
 
 <script>
-const reader = new ZXing.BrowserMultiFormatReader();
-const video = document.getElementById("preview");
-const scanListDiv = document.getElementById("scanList");
-let scanList = JSON.parse(localStorage.getItem("scanList")||"[]");
+const reader=new ZXing.BrowserMultiFormatReader();
+const video=document.getElementById("preview");
+const scanListDiv=document.getElementById("scanList");
+let scanList=JSON.parse(localStorage.getItem("scanList")||"[]");
 
 function renderList(){
-  scanListDiv.innerHTML = scanList.map(s=>`<span class='pill'>${s}</span>`).join('');
-  document.getElementById('scanCount').textContent = scanList.length;
-  localStorage.setItem("scanList", JSON.stringify(scanList));
-  localStorage.setItem("scanned", String(scanList.length));
+  scanListDiv.innerHTML=scanList.map(s=>`<span class='pill'>${s}</span>`).join('');
+  document.getElementById('scanCount').textContent=scanList.length;
+  localStorage.setItem("scanList",JSON.stringify(scanList));
+  localStorage.setItem("scanned",String(scanList.length));
 }
-
-document.getElementById('btnStart').onclick=()=>reader.decodeFromVideoDevice(null,video,(res,err)=>{if(res){scanList.unshift(res.text);renderList();}});
-document.getElementById('btnStop').onclick=()=>reader.reset();
-document.getElementById('btnAdd').onclick=()=>{const v=scanInput.value.trim();if(v){scanList.unshift(v);renderList();scanInput.value='';}};
+document.getElementById('btnStart').onclick=()=>{
+  reader.decodeFromVideoDevice(null,video,(res,err)=>{
+    if(res){scanList.unshift(res.text);renderList();}
+  });
+};
+document.getElementById('btnAdd').onclick=()=>{
+  const v=scanInput.value.trim();
+  if(v){scanList.unshift(v);renderList();scanInput.value='';}
+};
 scanInput.addEventListener('keydown',e=>{if(e.key==='Enter'){document.getElementById('btnAdd').click();}});
+document.getElementById('btnBack').onclick=()=>{history.back();};
 
-// 고객 50명 생성
+// 테스트 고객 50명 생성
 function makeCustomers(){
-  const baseLat=37.3795, baseLng=126.8060;
-  const arr=[];
+  const baseLat=37.3795, baseLng=126.8060; const arr=[];
   for(let i=1;i<=50;i++){
     const [lat,lng]=[baseLat+(Math.random()-0.5)*0.01, baseLng+(Math.random()-0.5)*0.01];
-    arr.push({id:"JONAM"+i, name:"조남고객"+i, phone:"010-0000-"+(1000+i),
+    arr.push({
+      id:"JONAM"+i, name:"조남고객"+i,
+      phone:"010-"+String(1000+i).padStart(4,'0')+"-"+String(2000+i).padStart(4,'0'),
       address:`경기도 시흥시 조남동 ${100+Math.floor(i/10)}동 ${100+i}호`,
-      boxes:1+(i%3), lat,lng});
+      boxes:1+(i%3), lat,lng
+    });
   }
   return arr;
 }
-let customers = makeCustomers();
+let customers=makeCustomers();
 
 function optimize(){
   if(!navigator.geolocation) return alert('GPS 불가');
@@ -84,18 +92,16 @@ function optimize(){
     customers.forEach((c,i)=>c.order=i+1);
     localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
     localStorage.setItem('optimizeByGPS','1');
-    alert('🧭 GPS 기준으로 경로 정렬 완료');
+    alert('🧭 GPS 기준 경로 최적화 완료');
   });
 }
 document.getElementById('btnOptimize').onclick=optimize;
-
 document.getElementById('btnDispatch').onclick=()=>{
   localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
   localStorage.setItem('startDispatch','1');
-  alert('🚀 출발 전송 완료 → 지도 페이지로 이동합니다.');
+  alert('🚀 출발 전송 완료 → 지도 페이지로 이동');
   location.href='map.html';
 };
-
 renderList();
 </script>
 </body>
